# career-flow-backend

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  pyproject.toml  railway.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: a87b526949f3_initial_schema.py  c36f072176b6_initial_empty.py  d2a14f3b8e91_add_lead_notes.py  e3b58c91a0fa_add_newsletter_subscriptions.py
app/: export_openapi.py  main.py  seed.py
app/api/: deps.py
app/api/routes/: admin.py  coaches.py  health.py  newsletter.py  packages.py  public.py  resources.py  success_stories.py
app/core/: config.py  db.py  logging.py  security.py
app/models/: __init__.py  base.py  booking.py  coach.py  lead.py  newsletter_subscription.py  package.py  payment.py  quiz_response.py  resource_download.py  stripe_event.py  success_story.py  waitlist_entry.py
app/schemas/: admin.py  coach.py  lead.py  newsletter.py  package.py  resource.py  success_story.py
app/services/: coach_service.py  email_service.py  lead_service.py  newsletter_service.py  package_service.py  pdf_service.py  posthog_service.py  slack_service.py  success_story_service.py
docs/: TODO.md
docs/agents/: domain.md  issue-tracker.md  triage-labels.md
docs/superpowers/plans/: 2026-05-20-week-1-foundation.md  2026-05-21-week-2-marketing-and-design.md  2026-05-21-week-3-data-and-public-api.md  (+5 more)
tests/: conftest.py
tests/integration/: test_admin.py  test_health.py  test_lead_capture.py  test_newsletter.py  test_public_endpoints.py
tests/unit/: test_config.py  test_health.py  test_posthog_service.py  test_security.py
(+1 files in other folders)
