[project]
name = "career-flow-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "cryptography>=48.0.0",
    "email-validator>=2.3.0",
    "fastapi[standard]>=0.136.1",
    "httpx>=0.28.1",
    "pydantic-settings>=2.14.1",
    "pyjwt>=2.12.1",
    "python-multipart>=0.0.29",
    "sentry-sdk[fastapi]>=2.60.0",
    "sqlalchemy[asyncio]>=2.0.49",
    "stripe>=15.1.0",
    "structlog>=25.5.0",
]

[dependency-groups]
dev = [
    "factory-boy>=3.3.3",
    "mypy>=2.1.0",
    "psycopg[binary]>=3.3.4",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "pytest-postgresql>=8.1.0",
    "respx>=0.23.1",
    "ruff>=0.15.13",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "S", "A", "C4", "T20", "PT", "RET", "SIM"]
ignore = ["S101"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S"]
"alembic/**" = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
exclude = ["alembic/"]
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["stripe.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
addopts = "-ra --strict-markers --cov=app --cov-report=term-missing"
testpaths = ["tests"]
markers = [
    "integration: integration tests requiring DB",
    "unit: unit tests with no DB",
]
